--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <h1>CHARLIE HARPER SUCKS</h1>
+    <nav>
+        <h1>CHARLIE HARPER SUCKS</h1>
 
-    <div>
-        <figure>
-            <img src="fogo.jpg" alt="fogo em chamas">
-        </figure>
-    </div>
+        <div>
+            <figure>
+                <img src="fogo.jpg" alt="fogo em chamas">
+            </figure>
+        </div>
+    </nav>
     <div>
         <button>FAQS</button>
         <button>MESSAGE BOARD</button>
