--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Reference: http://web.archive.org/web/20041216020839/www2.warnerbros.com/television/tvShows/twoandahalfmen/charlieharpersucks/-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <nav>
         <h1>CHARLIE HARPER SUCKS</h1>
 
-        <div>
+        <div >
             <figure>
                 <img src="fogo.jpg" alt="fogo em chamas">
             </figure>
