imagem e display flex

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Reference: http://web.archive.org/web/20041216020839/www2.warnerbros.com/television/tvShows/twoandahalfmen/charlieharpersucks/-->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,24 +13,21 @@
 <body>
     <nav>
         <h1>CHARLIE HARPER SUCKS</h1>
-
-        <div >
-            <figure>
-                <img src="fogo.jpg" alt="fogo em chamas">
-            </figure>
-        </div>
     </nav>
-    <div>
-        <button>FAQS</button>
-        <button>MESSAGE BOARD</button>
-        <button>CHAT ROOM</button>
-        <button>AUDIO LINKS</button>
-    </div>
-    <div>
-        <button>CONTACT US</button>
-        <button>CHARLIE SIGHTINGS</button>
-        <button>ANT CHARLIE I SHIRTS</button>
-        <button>LINKS TO OTHER CADS</button>
+    <div class="container">
+        <div>
+            <button>FAQS</button>
+            <button>MESSAGE BOARD</button>
+            <button>CHAT ROOM</button>
+            <button>AUDIO LINKS</button>
+        </div>
+        <img src="charlie.gif" alt="charlie-diable">
+        <div>
+            <button>CONTACT US</button>
+            <button>CHARLIE SIGHTINGS</button>
+            <button>ANT CHARLIE I SHIRTS</button>
+            <button>LINKS TO OTHER CADS</button>
+        </div>
     </div>
 </body>
 
