--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     </nav>
     <div class="container">
         <div>
-            <button>FAQS</button>
-            <button>MESSAGE BOARD</button>
+            <button style="font-size:35px;">FAQS</button>
+            <button>MESSAGE <br> BOARD</button>
             <button>CHAT ROOM</button>
-            <button>AUDIO LINKS</button>
+            <button>AUDIO <br> LINKS</button>
         </div>
-        <img src="charlie.gif" alt="charlie-diable">
+        <img src="charlie.gif" alt="charlie-diable" class="img_charlie">
         <div>
             <button>CONTACT US</button>
-            <button>CHARLIE SIGHTINGS</button>
-            <button>ANT CHARLIE I SHIRTS</button>
-            <button>LINKS TO OTHER CADS</button>
+            <button>CHARLIE <br> SIGHTINGS</button>
+            <button>ANT CHARLIE <br> I SHIRTS</button>
+            <button>LINKS TO <br> OTHER CADS</button>
         </div>
     </div>
 </body>
