--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <!-- Reference: http://web.archive.org/web/20041216020839/www2.warnerbros.com/television/tvShows/twoandahalfmen/charlieharpersucks/-->
 
 <head>
